--- a/src/app/screens/admin/categories-screen/categories-screen.component.html
+++ b/src/app/screens/admin/categories-screen/categories-screen.component.html
@@ -53,16 +53,17 @@
             <!-- Acciones -->
             <ng-container matColumnDef="acciones">
               <th mat-header-cell *matHeaderCellDef>Acciones</th>
-              <td mat-cell *matCellDef="let categoria">
+
+              <td mat-cell *matCellDef="let categoria" class="actions-cell">
                 <div class="action-buttons">
-                  <button mat-icon-button color="accent" (click)="editarCategoria(categoria)">
+                  <button class="edit-btn" (click)="editarCategoria(categoria)">
                     <mat-icon>edit</mat-icon>
                   </button>
 
-                  <button mat-icon-button color="warn"
-                    (click)="eliminarCategoria(categoria.id, categoria.nombre_categoria)">
-                    <mat-icon>delete</mat-icon>
+                  <button class="delete-btn" (click)="eliminarCategoria(categoria.id, categoria.nombre_categoria)">
+                    <mat-icon>delete_forever</mat-icon>
                   </button>
+
                 </div>
               </td>
             </ng-container>
