--- a/src/app/screens/admin/categories-screen/categories-screen.component.scss
+++ b/src/app/screens/admin/categories-screen/categories-screen.component.scss
@@ -10,6 +10,10 @@ $border-color: #e5e7eb;
 $app-navbar-height: 50px;
 $app-sidebar-width: 250px;
 
+//botones
+$danger-color: #dc3545;
+$primary-color: #007bff;
+
 .app-layout {
   display: grid;
   grid-template-columns: $app-sidebar-width auto;
@@ -197,4 +201,40 @@ $app-sidebar-width: 250px;
       }
     }
   }
+}
+
+
+/* --- Acciones de la Tabla --- */
+.actions-cell {
+    display: flex;
+    gap: 2px;
+
+    button {
+        background: none;
+        border: 1px solid $border-color;
+        border-radius: 4px;
+        padding: 6px 8px;
+        cursor: pointer;
+        transition: background-color 0.2s;
+
+        i {
+            font-size: 0.9rem;
+        }
+    }
+
+    .edit-btn {
+        color: $primary-color; /* Azul */
+        border-radius: 2dvh;
+        &:hover {
+            background-color: lighten($primary-color, 45%);
+        }
+    }
+
+    .delete-btn {
+        color: $danger-color; /* Rojo */
+        border-radius: 2dvh;
+        &:hover {
+            background-color: lighten($danger-color, 35%);
+        }
+    }
 }
