--- a/src/app/screens/admin/users-screen/users-screen.component.scss
+++ b/src/app/screens/admin/users-screen/users-screen.component.scss
@@ -23,6 +23,10 @@ $role-estudiante: #28a745;   // Verde
 $role-organizador: #007bff; // Azul
 $role-administrador: #dc3545; // Rojo
 
+
+//botones
+$danger-color: #dc3545;
+
 .app-layout {
   display: grid;
   grid-template-columns: $app-sidebar-width auto;
@@ -334,4 +338,40 @@ $role-administrador: #dc3545; // Rojo
     }
   }
 }
+
+/* --- Acciones de la Tabla --- */
+.actions-cell {
+    display: flex;
+    gap: 2px;
+
+    button {
+        background: none;
+        border: 1px solid $border-color;
+        border-radius: 4px;
+        padding: 6px 8px;
+        cursor: pointer;
+        transition: background-color 0.2s;
+
+        i {
+            font-size: 0.9rem;
+        }
+    }
+
+    .edit-btn {
+        color: $primary-color; /* Azul */
+        border-radius: 2dvh;
+        &:hover {
+            background-color: lighten($primary-color, 45%);
+        }
+    }
+
+    .delete-btn {
+        color: $danger-color; /* Rojo */
+        border-radius: 2dvh;
+        &:hover {
+            background-color: lighten($danger-color, 35%);
+        }
+    }
+}
+
 
